--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
     <script src="static/netdrop.min.js" charset="utf-8"></script>
   </head>
   <body>
-    <div class="container-fluid p-4" id="root">
+    <div id="root">
     </div>
   </body>
 </html>
